<resources>
    <string name="app_name">CoroutinesAdvanced</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dummy_fragment_text">Ich bin bloß ein Dummy-Fragment</string>
    <string name="tab_coroutines_description">Auf dieser Seite werden Coroutines in Verbindung mit Ktor vorgestellt.</string>
    <string name="lade_wetterdaten_button">Lade Wetterdaten</string>
    <string name="post_button">Sende ein POST Befehl ab</string>
    <string name="menu_coroutines_title">Coroutines</string>
    <string name="menu_uebersicht_der_verwendeten_libs_title">Übersicht der verwendeten Libs</string>
    <string name="viewpager2_horizontal">ViewPager2 Horizontal</string>
    <string name="viewpager2_vertical">ViewPager2 Vertical</string>
    <string name="viewpager2_tabs">ViewPager2 Tabs</string>
    <string name="viewpager2_pagetransition">ViewPager2 PageTransition</string>
    <string name="viewpager_2_pages_ueber_recyclerview">ViewPager 2 (Recyclerview)</string>
    <string name="recyclerview_mit_diffutil">RecyclerView mit DiffUtil</string>
    <string name="recyclerview_listadapter_diffutil">RecyclerView ListAdapter (DiffUtil)</string>
    <string name="paging3pagesource">Paging 3 (PageSource)</string>
    <string name="paging3remote">Paging 3 (RemoteMediator)</string>
    <string name="add_friend_hint">Freund hinzufügen</string>
    <string name="load_friends_button">Freunde laden</string>
    <string name="init_setfragmentresultlistener">init setFragmentResultListener</string>
</resources>
