<?xml version="1.0" encoding="utf-8"?>

<!-- Just place the same id that you added in the nav_graph , and it will work fine. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_coroutines"
        android:icon="@android:mipmap/sym_def_app_icon"
        android:title="@string/menu_coroutines_title" />
    <item
        android:id="@+id/menu_overviewLibs"
        android:icon="@android:mipmap/sym_def_app_icon"
        android:title="@string/menu_uebersicht_der_verwendeten_libs_title" />
    <item
        android:id="@+id/viewPagerHeader"
        android:title="@string/viewpager_2_pages_ueber_recyclerview">
        <menu>
            <item
                android:id="@+id/menu_viewpager2_horizontal"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="@string/viewpager2_horizontal" />
            <item
                android:id="@+id/menu_viewpager2_vertical"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="@string/viewpager2_vertical" />
            <item
                android:id="@+id/menu_viewpager2_page_transition"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="@string/viewpager2_pagetransition" />
            <item
                android:id="@+id/menu_viewpager2_tabs"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="@string/viewpager2_tabs" />
        </menu>
    </item>

    <item
        android:id="@+id/recyclerHeader"
        android:title="@string/recyclerview_mit_diffutil">
        <menu>
            <item
                android:id="@+id/menu_recycler_diffutil"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="@string/recyclerview_listadapter_diffutil" />
            <item
                android:id="@+id/menu_recycler_paging_source"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="@string/paging3pagesource" />
            <item
                android:id="@+id/menu_recycler_paging_remote"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="@string/paging3remote" />
        </menu>
    </item>

    <item
        android:id="@+id/dummyModuleHeader"
        android:title="Dummy Module Header">
        <menu>
            <item
                android:id="@+id/menu_dummy_module_fragment"
                android:icon="@android:mipmap/sym_def_app_icon"
                android:title="dummy module fragment" />
        </menu>
    </item>
</menu>